--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -77,7 +77,7 @@ minimum precision unsigned integer types are collectively called
 
 \p The signed integer types and unsigned integer types are collectively called
 \textit{integer types}. Integer types inherit the object representation of
-integers defined in \gls{isoC23}\footnote{C23 adopts two's compliment as the
+integers defined in \gls{isoC23}\footnote{C23 adopts two's complement as the
 object representation for integer types.}. Integer types shall satisfy the
 constraints defined in \gls{isoCPP}, section \textbf{basic.fundamental}.
 
