--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -159,6 +159,11 @@ to a higher conversion rank.
   corresponding signed integer type.
   \item The rank of \texttt{bool} shall be less than the rank of all other
   standard integer types.
+  \item The rank of a minimum precision integer type shall be less than the rank
+  of any other minimum precision integer type with a larger minimum value
+  representation size.
+  \item The rank of a minimum precision integer type shall be less than the rank
+  of all standard integer types.
   \item For all integer types \texttt{T1}, \texttt{T2}, and \texttt{T3}: if
   \texttt{T1} has greater rank than \texttt{T2} and \texttt{T2} has greater rank
   than \texttt{T3}, then \texttt{T1} shall have greater rank than \texttt{T3}.
@@ -167,11 +172,9 @@ to a higher conversion rank.
 \Sub{Floating Point Conversion Rank}{Conv.rank.float}
 
 \begin{itemize}
-  \item No two floating point types shall have the same conversion rank even if
-  they have the same representation.
-  \item The rank of a floating point type shall be greater than the rank of any
-  floating point type with a smaller size.
+  \item The rank \texttt{half} shall be greater than the rank of \texttt{min16float}.
   \item The rank \texttt{float} shall be greater than the rank of \texttt{half}.
+  \item The rank \texttt{double} shall be greater than the rank of \texttt{float}.
   \item For all floating point types \texttt{T1}, \texttt{T2}, and \texttt{T3}:
   if \texttt{T1} has greater rank than \texttt{T2} and \texttt{T2} has greater
   rank than \texttt{T3}, then \texttt{T1} shall have greater rank than
