--- a/specs/language/macros.tex
+++ b/specs/language/macros.tex
@@ -40,3 +40,9 @@
   leftmargin=\grammarindentrest, listparindent=-\grammarindentinc,
   itemindent=\listparindent
 }
+
+\lstloadlanguages{C++} % TODO: Consider defining an HLSL language...
+\lstnewenvironment{HLSL}
+{\lstset{language=C++,
+basicstyle=\small,
+xleftmargin=1em}}{}
