--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -1,8 +1,20 @@
+% This file contains chapter and section references to speculative headings that
+% haven't been written yet. The specific names and ordering aren't expected to
+% match exactly this in the final specification. These are mostly here so that
+% forward references can be inserted into the specification as it is being
+% written to force updating the references as they change.
+
+\Ch{Statements}{Stmt}
+\Sec{Label Statements}{Stmt.Label}
 \Ch{Declarations}{Decl}
 \Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
 \Ch{Classes}{Classes}
+\Sec{Conversions}{Classes.Conversions}
 \Ch{Overloading}{Overload}
+\Sec{Operators}{Overload.Operator}
+\Ch{Templates}{Template}
+\Sec{Template Instantiation}{Template.Inst}
 \Ch{Intangible Types}{Intangible}
 \Ch{Runtime}{Runtime}
