Add cbuffer and tbuffer to examples
cbuffer and tbuffer are odd. They declare global variables that are
read from a specific cbv or srv and allow defining layouts of the
buffers. The name of the buffer is exposed in reflection data, but not
declared as a name within the translation unit.

The names of variables within the buffers are declared as global names.

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -109,6 +109,12 @@ struct S;                    // declares S
 typedef int Int;             // declares Int
 using N::d;                  // declares d
 using Float = float;         // declares Float
+cbuffer CB {                 // does not declare CB
+  int z;                     // declares z
+}
+tbuffer TB {                 // does not declare TB
+  int w;                     // declares w
+}
 \end{HLSL}
 
 \Sec{Types}{Basic.types}
