--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -85,7 +85,7 @@ external in HLSL.},
 \p The two examples below is adapted from \gls{isoCPP} \textbf{[basic.def]}. All
 but one of the following are definitions:
 \begin{HLSL}
-int f(int x) { return x+a; } // defines f and x
+int f(int x) { return x+1; } // defines f and x
 struct S {int a;int b;};     // defines S, S::a, and S::b
 struct X {                   // defines X
   int x;                     // defines non-static member x
