Fix the other error. I should scroll before committing.

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -104,7 +104,7 @@ static int i;                // defines N::i
 int a;                       // declares a
 const int c;                 // declares c
 X anX;                       // declares anX
-int f(int);                  // declares g
+int f(int);                  // declares f
 struct S;                    // declares S
 typedef int Int;             // declares Int
 using N::d;                  // declares d
