Begin writing overloading spec
This captures the basic terminology and describes the situations in
which a declaration is not overloadable.

There are a lot of similarities here with C++, but also a lot of unique
HLSL behavior.

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -11,9 +11,8 @@
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
 \Ch{Classes}{Classes}
+\Sec{Static Members}{Classes.Static}
 \Sec{Conversions}{Classes.Conversions}
-\Ch{Overloading}{Overload}
-\Sec{Operators}{Overload.Operator}
 \Ch{Templates}{Template}
 \Sec{Template Instantiation}{Template.Inst}
 \Ch{Intangible Types}{Intangible}
