--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -103,14 +103,19 @@ subobject ordering.
 initializer list or an expression which generates a value that either is or can
 be implicitly converted to an rvalue. Each assignment-expression is an object,
 which may be a scalar or aggregate type. A \textit{flattened initializer
-sequence} is constructed by a depth-first traversal over each
-assignment-expression in an initializer-list and performing a depth-first
-traversal accessing each subobject of the assignment-expression.
+sequence} is a sequence of expressions constructed by a depth-first traversal
+over each assignment-expression in an initializer-list and performing a
+depth-first traversal accessing each subobject of the assignment-expression.
 
-\p An initializer-list is a valid initializer if for each element \(E_n\) in the
-target object's flattened ordering there is a corresponding initializer \(I_n\)
-in the flattened initializer sequence which can be implicitly converted to the
-element's type.
+\p If the target object is an array of unknown size, the object is assumed to
+have \(m\) possible elements during parsing, where \(m>0\).
+
+\p An initializer-list is a valid initializer if for each element
+\(E_{n \bmod m}\) in the target object's flattened ordering there is a
+corresponding expression \(E_n\) in the flattened initializer sequence, which
+can be implicitly converted to the element's type. For arrays of unknown size,
+the total number of expressions in the flattened initializer sequence must be a
+multiple of the array's base element type.
 
 \p An initializer-list is invalid if the flattened initializer sequence contains
 more or fewer elements than the target object's flattened ordering, or if any
